garde/tests/ui/compile-fail/non_unary_newtype.stderr
error: transparent structs must have exactly one field
 --> tests/ui/compile-fail/non_unary_newtype.rs
  |
  | #[garde(transparent)]
  | ^^^^^^^^^^^^^^^^^^^^^

error: transparent structs must have exactly one field
 --> tests/ui/compile-fail/non_unary_newtype.rs
  |
  | #[garde(transparent)]
  | ^^^^^^^^^^^^^^^^^^^^^

error: transparent structs must have exactly one field
 --> tests/ui/compile-fail/non_unary_newtype.rs
  |
  | #[garde(transparent)]
  | ^^^^^^^^^^^^^^^^^^^^^

error: transparent structs must have exactly one field
 --> tests/ui/compile-fail/non_unary_newtype.rs
  |
  | #[garde(transparent)]
  | ^^^^^^^^^^^^^^^^^^^^^
